--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
 }
 
 .markdown > h3 {
+  @apply text-3xl;
+}
+
+.markdown > h4 {
   @apply text-2xl;
 }
 
@@ -95,4 +99,12 @@ pre > code.hljs {
 .hljs-comment,
 .hljs-formula {
   @apply text-gray-500;
+}
+
+.hljs-addition {
+  @apply text-green-500 brightness-90;
+}
+
+.hljs-deletion {
+  @apply text-red-500 brightness-90;
 }
